# Penmanship

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cpp.hint
src/: CellItem.cpp  CellItem.h  EditGraphicsScene.cpp  EditGraphicsScene.h  EditGraphicsViewer.cpp  EditGraphicsViewer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Penmanship.cpp  Penmanship.h
